# Robot_cup_Saga

./: .gitignore  README.md
Pi/regbot/: gyro_noise_7.txt  mission_vel.m  regbot_2.slx
Pi/regbot/regbot2/: regbot.cpp
Pi/regbot/regbot_robocup/: Storarm.stl  Storarm_rev2.stl  battery_hold.stl  front-arm-4-left.stl  front-arm-4.stl  front-arm.stl  front-box.stl  front-stag.stl  laser_mount.stl  linesensor-mount-right.stl  motor_bridge_rev_2.stl  rear-box.stl  regbot_robocup.fcstd1  wheel-mount.stl
Pi/regbot/regbotgui/: regbotdesign.py  uinfo.py  urobot.py
Pi/regbot/ringled/: Makefile
Pi/regbot/robobot/: main.cpp  ucamera.cpp  ucamera.h  ujoy.cpp  umission.cpp  umission.h  uregbot.h  urun.cpp
Pi/regbotgui/: uencoder.py  uimu.py  uservo.py
Pi/robobot_bridge/: Adafruit_GFX.h  Doxyfile  main.cpp  robobot-overview.odg  robobot_bridge.kdev4  ubridge.cpp  ubridge.h  udata.cpp  udataitem.cpp  udataitem.h  uhandler.cpp  uhandler.h  ujoy.h  uregbot.h  urun.h  userverclient.cpp  userverport.cpp  utime.h
regbot/: ballance_only_10.m  control_results.odp  robot-diagram.pro
regbot/matlab/log_2015_11_01/: step_plot.m
regbot/regbot2/: Doxyfile  Makefile
regbot/regbot2/src/: command.h  (+23 more)
regbot/regbot_robocup/: base-and-motor-mount.stl  battery+pi-mount.stl  front-box-new.stl  hitec-steer-servo-mount.stl  linesensor-mount-left.stl  motor_bridge.stl  rear-box_rev_2.stl  rear-stag.stl  regbot_robocup.fcstd  servo-mount-big-right.stl  servo-mount-big.stl  side-left.stl  side-right.stl  steer-mount.stl
regbot/regbotgui/: udrive.py  uirsensor.py  ujoy.py  ulinesensor.py  ulog.py  umission.py
regbot/robobot/: CMakeLists.txt  bashrc  rc.local  u2dline.cpp  u2dline.h  ujoy.h  umission.cpp  uregbot.cpp  urun.h
regbot/robobot/3dprint-v2/: base-frame.stl
regbot/robobot/doc/: install.sh  rc.local  robobot_description.odp  robobot_status_2021.ods  wpa_supplicant.conf
regbot/robobot/oled/: ArduiPi_OLED.cpp  ArduiPi_OLED_lib.h  Makefile  oled_disp_ip.cpp
regbotgui/: control_edit.py  regbot.py  regbotdesign.ui  robocup_mission.mis  upaintsupport.py
robobot_bridge/: ArduiPi_OLED.cpp  ArduiPi_OLED.h  ArduiPi_OLED_lib.h  CMakeLists.txt  bcm2835.c  opencv_install_script_raspberry.sh  tcpCase.cpp  udata.h  ujoy.cpp  ulogfile.cpp  ulogfile.h  uoled.cpp  uregbot.cpp  userverclient.h  userverport.h
(+88 files in other folders)
