cmake_minimum_required(VERSION 2.6)
project(robobot)
#find_package(raspicam REQUIRED)
find_package(raspicam)
find_package(OpenCV REQUIRED )
find_package(Threads REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
if (raspicam_FOUND)
  message("CMAKE found raspberry camere module")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -std=c++11 -D PI_CAM")
else()
  message("CMAKE no rapberry pi camera support")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -std=c++11")
endif()
set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-pthread")
add_definitions(-Draspicam_CV_LIBS)
add_executable(robobot main.cpp urun.cpp ucamera.cpp uregbot.cpp umission.cpp utime.cpp ujoy.cpp)
target_link_libraries(robobot ${OpenCV_LIBS} ${raspicam_CV_LIBS} ${CMAKE_THREAD_LIBS_INIT})
install(TARGETS robobot RUNTIME DESTINATION bin)
